style/style.css
body {
    padding-top: 2rem;
    background-color:#222022;
    height: 100%;
    margin: 0;
}

.nav-link{
    font-size: 20px;
    margin-right: 10px

}
.navbar-nav li a:hover,
.navbar-nav li.active a {
    color:white !important;
    font-weight: bolder
}

.craig-banner img{
    border-radius: 25px;
    margin-left: 20px;
    margin-top: 50px;
}
.craig-name{
    font-size: calc(20px + 2vw);
    margin-left: 10px;
}

.nav-bar-center{
    max-width: 948px;
    margin: auto;
    width: 100%;
    min-height: 100px;
}

.nav-links-right{
    float: right;
    width: 100%;
    max-width: 600px;
    margin-top: 25PX;
    line-height: 25px;
}

.container{
    padding-right: 0px;
    padding-left: 0px;
}

.bg-inverse {
    background-color: #222022 !important;
    padding-bottom: 0px;
    padding-top: 0px;
}
.navbar-toggleable-md .navbar-collapse {
    width: 50%;
    margin: auto;
}

.collapse.show .nav-item{
    padding-right: 200px

}

.navbar-brand{
    padding-left: 6vw;
    padding-bottom: 0px;
    padding-top: 0px;
}

.footer {
    position: fixed;
    bottom: 0;
    width: 100%;
    height: 50px;
    line-height: 50px; 
    background-color: transparent;
  }

  .social-bar{
    margin-left: 35px;
    margin-bottom: 20px;
  }

  .social-bar img{
    width: 38px;
    height: 38px;
    margin-bottom: 10px;
    margin-left: 2vw;
    border-radius: 10px;
    margin-top: 0px;
}

.mySlides {
    background-position: center bottom;
    display: none;
    margin: auto;
    background-repeat: no-repeat;
    background-size: cover;
}

.slideshow-container {
  position: relative;
  margin: auto;
}

.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 60%;
  width: auto;
  padding: 16px;
  margin-top: -22px;
  color: white !important;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  z-index: 5;
}

.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
  background-color: rgba(0,0,0,0.8);
}

/* The dots/bullets/indicators */
.dot {
  cursor: pointer;
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.dots .active, .dot:hover, .instaDots .active {
    background-color: #bbb;
    border: 5px solid white;
}

.dots{
    position: relative;
    z-index: 2;
    margin-top: -70px;
    z-index: 2;
    text-align:center
}

.fade {
    -webkit-animation-name: fade;
    -webkit-animation-duration: 2.5s;
    animation-name: fade;
    animation-duration: 2.5s;
    animation-fill-mode:forwards
}

.section{
    margin: 20px;
    margin-bottom: 30px;
    margin-top: 30px;
}
#about label{
    color: white;
}
#about {
    color:#908f90;
}

.sectionTitle{
    color: white;
    font-size: calc(10px + 2vw);
    text-align: center;
    margin-bottom: 25px;
    padding-top: 20px;
}


@-webkit-keyframes fade {
  from {opacity: .4} 
  to {opacity: 1}
}

@keyframes fade {
  from {opacity: .4} 
  to {opacity: 1}
}


/* The Modal (background) */
.modal {
    display: none;
    position: fixed;
    z-index: 1;
    padding-top: 100px;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: black;
  }
  
  /* Modal Content */
  .modal-content {
    position: relative;
    margin: auto;
    padding: 0;
    width: 100%;
    max-width: 1200px;
    height: 100%;
    border: none;
    background-color: transparent;

  }
  
  /* The Close Button */
  .close {
    color: white;
    position: absolute;
    right: 25px;
    font-size: 35px;
    font-weight: bold;
    z-index: 4;
  }
  
.close:hover,
.close:focus {
    color: #999;
    text-decoration: none;
    cursor: pointer;
  }

.instaDots{
    position: absolute;
    z-index: 2;
    margin: auto;
    width: 100%;
}


.instaDotCase{

    text-align: center;
    position: relative;
    width: 90%;
    margin: auto;
  }

#fullInstaSlideShow{
    background: black;
    z-index: 3;
}

body.modal-open {
    overflow: hidden;
    outline: none;
}

.instaSlide{
    width:95%;
    margin:auto;
    max-width:644px;
    display:none;
    text-align: center;
    align-items: inherit;
}
.caption-container{
    text-align: center;
    color: white;
}
.numbertext{
    color:  white;
}

.sponsors{
    margin: 10px;
}

.sponsor{
    /* height: 114px; */
    margin-top: 15px;
}

.sponsor img{
    max-width: 100%;
    padding: 10px;
    background-color: transparent;
}
.sponsorLogoBG{
    display: flex;
    align-items: center;
}

.sponsors label {
    color: white;
}
.sponsors .row{
    text-align: center;
}

.sponsors iframe{
    width:  100%;
    /* margin-bottom: 20px; */
}

.sponsors label{
    width:  100%;
    margin-bottom: 20px;
}
.thumbSlide{
    cursor: pointer;
}
.thumbSlide img{
    margin: 5px;
}
/* 
#thumbnailFeed{
    text-align: center;
} */

.afterFall img{
    margin-bottom: 20px;
}
.fixed-footer{
    text-align: right;
    margin-right: 25px;
    color: RGB(255,255,255,0.2);    
}

.contact label{
    color: white;
}

.contactSocial{
    text-align: center;
}
.contactSocial img{

    width: 80px;
    height: 80px;
    margin-bottom: 10px;
    margin: 5vw;
    border-radius: 10px;
    margin-top: 0px;
}
/* .contact-social{
    -webkit-animation: myfirst 1s 1; 
    -webkit-animation-direction: normal; 
    animation: myfirst .5s 1;
    animation-direction: normal;
    animation-fill-mode: forwards;
    height: 100px !important;
} */

/* .contact-social-size {
    width: 80px !important;
    height: 80px !important;
    animation: mySecond .5s 1;
} */

